--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Avenir+Next:wght@500&display=swap');
 
 :root {
-  --background-color: #e7ffc2;
+  --background-color: #daffa2;
   --price-color: #ff69b4;
   --hr-color: #ffb6c1;
 }
