--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
   font-family: 'Avenir Next', sans-serif;
   background-color: var(--background-color);
   text-align: center;
-  color: #333;
+  color: #ffb8cd;
 }
 header {
   height: 250px;
