--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 :root {
   --background-color: #daffa2;
   --price-color: #ff69b4;
-  --hr-color: #ffb6c1;
+  --hr-color: #faafbb;
 }
 
 body {
@@ -73,4 +73,10 @@ hr {
   background-color: var(--hr-color);
   margin: 30px auto;
   width: 80%;
+}
+p {
+    color:#faafbb;
+}
+ul {
+    
 }
